kubernetes_project/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-app   # Change this to a meaningful name
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-app
  template:
    metadata:
      labels:
        app: k8s-app
    spec:
      containers:
      - name: k8s-app
        image: your-repository:your-tag
        ports:
        - containerPort: 9090
        resources:
          limits:
            cpu: "200m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
