kubernetes_project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-app
spec:
  selector:
    app: k8s-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
